gnome-software (3.26.0-1) UNRELEASED; urgency=medium

  [ Iain Lane ]
  * debian/rules: Make sure to not build with -Wl,-Bsymbolic-functions

  [ Jeremy Bicha ]
  * New upstream release

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 14 Sep 2017 20:16:00 -0400

gnome-software (3.25.91-1) experimental; urgency=medium

  * debian/compat: Bump to 10, mainly to get --parallel by default.
  * New upstream release 3.25.91 (LP: #1706715)
    + Doesn't let you cancel PackageKit (.deb) installations when PK says it's
      not allowed. (LP: #1707053)

 -- Iain Lane <laney@debian.org>  Thu, 24 Aug 2017 16:33:38 +0100

gnome-software (3.25.4-1) experimental; urgency=medium

  * New upstream release 3.25.4
  * debian/rules: Switch to debhelper's meson buildsystem instead of calling
    meson directly ourselves.
  * debian/rules: Use dh_missing --fail-missing instead of dh_install.
  * debian/control{,.in}: Bump debhelper BD to 10.4 for the above.

 -- Iain Lane <laney@debian.org>  Tue, 25 Jul 2017 13:02:15 +0100

gnome-software (3.25.3-1) experimental; urgency=medium

  * New upstream release 3.25.3
  * debian/control{,.in}: Bump libappstrem-glib-dev and libfwupd-dev versions
    in line with meson.build.
  * debian/rules: -Denable-firmware is now called -Denable-fwupd.
  * debian/patches: Drop - these are all upstream.

 -- Iain Lane <laney@debian.org>  Fri, 23 Jun 2017 17:44:59 +0100

gnome-software (3.25.1-1) experimental; urgency=medium

  [ Jeremy Bicha ]
  * debian/control.in:
    - Bump minimum appstream-glib to 0.6.7

  [ Iain Lane ]
  * New upstream development release 3.25.1
  * debian/watch: Find unstable versions
  * Build with meson. The debhelper support isn't yet in Debian, so we're
    calling meson directly. Once it is, we can switch.
  * debian/patches/0001-build-Use-the-configured-directory-locations-to-inst.patch,
    debian/patches/0002-build-Fix-the-pcfile.patch,
    debian/patches/0003-build-limba-Set-limba-as-a-dependency.patch: Some